# hypr-socket-watch

./: Cargo.toml  README.md  config.yaml  flake.nix
nix/: default.nix  hm-module.nix
src/: main.rs  util.rs
src/model/: config.rs
