[package]
name = "hypr-socket-watch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "5.0.1"
env_logger = "0.11.3"
log = "0.4.21"
regex = "1.10.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.33"
tokio = { version = "1.36.0", features = ["socket2", "net", "io-std", "io-util", "full"] }
tokio-util = "0.7.10"
